--- a/html/lv.html
+++ b/html/lv.html
@@ -28,7 +28,7 @@
             <!--header-->
             <div class="row">
                 <div class="col-lg-2 ">
-                    <a href="../home.html"><img src="../shoetin_img/logo.png" alt="" class="logo"></a>
+                    <a href="../index.html"><img src="../shoetin_img/logo.png" alt="" class="logo"></a>
                 </div>
                 <div class="col-lg-5 text-center">
                     <div>
