--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 
 <body>
-    <div class=" header-container xam">
-        <div class="container xam ">
+    <div class=" header-container">
+        <div class="container">
             <!--header-->
             <div class="row">
                 <div class="col-lg-2 col-md-2 col-3">
-                    <a href="./index.html"><img src="./shoetin_img/logo.png" alt="" class="logo"></a>
+                    <a href="./index.html"><img src="./shoetin_img/logo-removebg-preview.png" alt="" class="logo"></a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-9 text-center ">
                     <div class="dt">
@@ -491,7 +491,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 diachi">
-                    <img src="./shoetin_img/logo.png" alt="">
+                    <img src="./shoetin_img/logo-removebg-preview.png" alt="">
                     <h5>Shop Giày Shoetin</h5>
                     <h4>Thông tin liên hệ</h4>
                     <p>Địa chỉ: 2 Trường Sa, Bình Thạnh, TPHCM </p>
